docs: update README API testing instructions
