# src/models/member.ts
@@ -1,0 +1,8 @@
+export interface Member {
+  _id?: string
+  username: string
+  password: string
+  email: string
+  photoUrl?: string
+  favourites?: string[] // hotel ids
+}
