# src/models/operator.ts
@@ -1,0 +1,7 @@
+export interface Operator {
+  _id?: string
+  username: string
+  password: string
+  email: string
+  agency: string
+}
